# px5deditor

./: AUTHORS  CHANGELOG  CMakeLists.txt  INSTALL  README  README.md  TODO  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  constants.h  events.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pandoraEditor.pro  px5dbridge.cpp  px5dbridge.h  px5de_desktop.sh  px5de_man.sh  px5deditor.qrc  px5deditor.spec  regexpucvalidator.h  storeprogramdialog.cpp  storeprogramdialog.h  storeprogramdialog.ui
data/: .directory  PX5D Extra Program.px5p  PX5D Preset Chain.px5c  PX5D Preset Program.px5p  build_all_icons.sh  icon.xcf
engine/: .directory  pandoraobservable.cpp  pandoraobservable.h  pandoraobserver.cpp  pandoraobserver.h  pandorapreset.cpp  pandorapreset.h  presetamp.cpp  presetamp.h  presetcabinet.cpp  presetcabinet.h  presetdelay.cpp  presetdelay.h  presetdynamics.cpp  presetdynamics.h  presetmodulation.cpp  presetmodulation.h  presetname.cpp  presetname.h  presetnoisereduction.cpp  presetnoisereduction.h  presetparameters.h  presetreader.cpp  presetreader.h  presetreverb.cpp  presetreverb.h  px5dcontroller.cpp  px5dcontroller.h
